# job-hunting-ci-test

./: .gitignore  CHANGELOG.md  README.md  admin.html  background.js  manifest.json  nx.json  offscreen.html  package.json  pnpm-lock.yaml  proxyAjax.js  quickstart.md  tsconfig.json  wxt.config.ts
apps/server/: .env  Cargo.toml  Dockerfile  README.md  project.json
apps/server/docs/bdd/: main.drawio
apps/server/migration/: Cargo.toml
apps/server/migration/src/: lib.rs  m20241230_000001_create_job_table.rs
apps/server/src/: lib.rs  main.rs
apps/server/src/data/: mod.rs
apps/server/src/data/bo/: job_search_bo.rs  mod.rs  page_bo.rs  page_param_bo.rs
apps/server/src/data/dto/: mod.rs  page_result_dto.rs
apps/server/src/data/entity/: job.rs  mod.rs  prelude.rs
apps/server/src/database/: mod.rs
apps/server/src/service/: job.rs  mod.rs
apps/server/tests/: dao_test.rs  example.rs  feature_job_test.rs  index_service_test.rs
apps/server/tests/common/: mod.rs
apps/server/tests/features/job/fetch_info/: data_share_plan.feature
apps/server/tests/features/job/get_info/: search.feature
assets/: admin-CI2EmQuF.css  admin-D2pIs0If.css  nodefs-B2ERGyWL.js  nodefs-Cn2Twm3k.js  opfs-ahp-D9UsRWYX.js  opfs-ahp-Zj-rL6yI.js  worker-DVlOAtkc.js  worker-vd7VJ-gJ.js
chunks/: bridgeCommon-BUFwIUqc.js  bridgeCommon-CUNsp_8N.js  index-3Ayv_3aW.js  index-3mGA0tif.js  index-7bUTueil.js  index-B2adBCZl.js  index-B59TRu2Q.js  index-B6O8m4XD.js  index-B7WSSmz-.js  index-B9qWxo8r.js  index-BC8VY1jU.js  index-BDIqwNu2.js  index-BGw1VB9o.js  index-BH6Z5rs9.js  index-BL2Q5M5v.js  (+39 more)
(+381 files in other folders)
