[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version="0.8.1"}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = "0.1.0"
mime = "0.3"
sea-orm = { version = "1.1.4", features = [ "sqlx-postgres","sqlx-sqlite", "runtime-tokio-rustls", "macros","debug-print" ] }
chrono = "0.4.39"
migration={path="migration"}
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.5",features = ["postgres"] }
uuid = { version = "1.11.1",features = ["v4"]}

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
cucumber = { version = "0.21.1", features = ["tracing","output-json"]}
futures = "0.3"

[[test]]
name = "example" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest
